@@ -136,8 +136,8 @@ defaults = list(
   glottisAnchors = 0,
   noiseAnchors = list(time = c(0, 300), value = c(-80, -80)),
   mouthAnchors = list(time = c(0, 1), value = c(.5, .5)),
-  amplAnchors = list(time = c(0, 1), value = c(80, 80)),
-  amplAnchorsGlobal = list(time = c(0, 1), value = c(80, 80)),
+  amplAnchors = list(time = c(0, 1), value = c(0, 0)),
+  amplAnchorsGlobal = list(time = c(0, 1), value = c(0, 0)),
   formants = c(860, 1430, 2900),
   formantsNoise = NA,
   vowelString = NA,
